<resources>
    <string name="app_name">Films</string>
    <string name="new_film_tit">New Film</string>


    <string name="newfilm_title">Title</string>
    <string name="newfilm_director">Director</string>
    <string name="newfilm_country">Country</string>
    <string name="newfilm_year">Year</string>
    <string name="newfilm_protagonist">Protagonist</string>
    <string name="newfilm_critics_rate">Critics_rate</string>
    <string name="deleted">Deleted %s</string>
    <string name="undo">Undo</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_search">Search</string>
    <string name="more">More</string>
    <string name="film_list">Film List</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="dialog_help">To add an element tap the + button\n\nTo remove an element swipe it horizontally\n\nTo edit a rating click the rating bar\n\nTo search, click the search icon at the top\n\nMore actions are found in the left menu</string>
    <string name="dialog_about">MyFilmDatabase\n\nBy Luuk Willemsen and David Williams</string>
    <string name="search">Search</string>
    <string name="action_sort">Sort</string>
    <string name="sort_title">By title</string>
    <string name="sort_year">By release year</string>
    <string name="add">Add film</string>
</resources>
