<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_film_list"
            android:checked="true"
            android:icon="@drawable/ic_local_movies_black_24dp"
            android:title="@string/film_list" />
        <item
            android:id="@+id/sort"
            android:checkable="false"
            android:icon="@drawable/ic_sort_black_24dp"
            android:title="@string/action_sort" />

        <item
            android:id="@+id/search"
            android:checkable="false"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/action_search" />
        <item
            android:id="@+id/add"
            android:checkable="false"
            android:icon="@drawable/ic_add_black_24dp"
            android:title="@string/add" />

    </group>

    <item android:title="@string/more">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help_outline_black_24dp"
                android:title="@string/help" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_outline_black_24dp"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
